# atlas

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  SUPPORT.md
.agents/plugins/: marketplace.json
.cmap/: config.toml  fingerprints.jsonl
.cmap/global/: term_index.json
.cmap/views/: CONNECTIONS.md  ROOT_ATLAS.md  TERMS.md  connections.dot  connections.mermaid
.cmap/views/folders/: root.md  src.md  src_aggregate.md  src_analyze.md  src_cache.md  src_cli.md  src_config.md  src_extract.md  src_render.md  src_scan.md
.github/workflows/: ci.yml  npm-plugins-publish.yml  release-crate.yml
apps/codex-plugin/: README.md  package.json
apps/codex-plugin/.codex-plugin/: plugin.json
apps/codex-plugin/hooks/: hooks.json
apps/codex-plugin/test/: hooks.test.mjs
apps/opencode-plugin/: README.md  package.json  tsconfig.json
apps/opencode-plugin/src/: index.ts  session-prompt.ts
apps/opencode-plugin/src/server/: atlas.ts  hooks.ts  layers.ts
apps/opencode-plugin/src/shared/: constants.ts  errors.ts  logger.ts
apps/opencode-plugin/test/: index.test.ts
docs/: publishing.md
src/: lib.rs  main.rs  types.rs
src/aggregate/: folder_sig.rs  mod.rs  term_index.rs
src/analyze/: features.rs  links.rs  mod.rs  ngrams.rs  rake.rs  tfidf.rs  tokenize.rs  yake.rs
src/cache/: features.rs  fingerprints.rs  last_build.rs  mod.rs  tantivy_backend.rs
src/cli/: build.rs  clean.rs  doctor.rs  init.rs  mod.rs  scan.rs  search.rs
src/config/: mod.rs
src/extract/: markdown.rs  mod.rs  pdf.rs  plaintext.rs  rust.rs  treesitter.rs  typescript.rs
src/render/: atlas.rs  folder_index.rs  graph.rs  mod.rs  term_index.rs
src/scan/: fingerprint.rs  mod.rs  walker.rs
tests/: doctor_test.rs  reproducibility_test.rs  scan_test.rs  search_test.rs
